Adicionando font e SQLite

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: rap_market
-description: "A new way to organize shop."
+description: "It helps you organize and calculate how much your grocery shopping will cost."
 publish_to: "none"
 
 version: 1.0.0+1
